Fix template bug

--- a/playbooks/templates/snow_attach_store_diagnostic_report/data_analysis.j2
+++ b/playbooks/templates/snow_attach_store_diagnostic_report/data_analysis.j2
@@ -343,6 +343,7 @@
   {% else %}
     {% set ns.issue_found = true %}
     {% set mist_site_txt = "N/A 🔴" %}
+    {% set all_aps_connected = "unknown" %}
     {% set connected_aps_txt = "N/A 🔴" %}
     {% set connected_clients_txt = "N/A 🔴" %}
   {% endif %}
