--- a/playbooks/templates/snow_attach_store_diagnostic_report/work_notes.j2
+++ b/playbooks/templates/snow_attach_store_diagnostic_report/work_notes.j2
@@ -46,4 +46,9 @@ Mist Wireless:
   {{ da.mist_wlans_txt }}
   {{ da.mist_client_stats_txt }}
 {% endif %}
+
+</pre>
+<h3>Store Details</h3>
+<pre style="background-color: transparent; border-width: 0">
+{{ da.store_wan_circuits_txt}}
 </pre>
