--- a/playbooks/templates/snow_attach_store_diagnostic_report/diagnostic_report.j2
+++ b/playbooks/templates/snow_attach_store_diagnostic_report/diagnostic_report.j2
@@ -22,6 +22,7 @@ Mist Wireless: {% if mist_store %}Yes{% else %}No{% endif +%}
 
 ##### Store Analysis ##############################
 
+{{ da.recent_incidents_txt }}
 Store Switch:
   Pingable: {{ da.store_switch_pingable_txt }}
   Uptime: {{ da.store_switch_uptime_txt }}
