--- a/playbooks/templates/snow_attach_store_diagnostic_report/work_notes.j2
+++ b/playbooks/templates/snow_attach_store_diagnostic_report/work_notes.j2
@@ -8,6 +8,7 @@
 </pre>
 <h3>Store Analysis</h3>
 <pre style="background-color: transparent; border-width: 0">
+{{ da.recent_incidents_txt }}
 Store Switch:
   Pingable: {{ da.store_switch_pingable_txt }}
   Uptime: {{ da.store_switch_uptime_txt }}
