--- a/playbooks/templates/snow_attach_store_diagnostic_report/data_analysis.j2
+++ b/playbooks/templates/snow_attach_store_diagnostic_report/data_analysis.j2
@@ -1,7 +1,7 @@
 {% set ns = namespace(issue_found = false) %}
 {# Process Data #}
 {# Recent Store Related Incidents #}
-{% if recent_incidents %}
+{% if recent_incidents | default("") %}
   {% set recent_incidents_txt = ["Recent Store Related Incidents (Past 15 Minutes):"] %}
   {% for inc in recent_incidents | sort(attribute="incident_created_on")  %}
     {% set inc_store_details = recent_inc_store_details | selectattr("u_store_number", "match", inc.store_number) | first %}
